spacing fixes

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -39,7 +39,7 @@ h1, .h1 {
 /* Paragraph */
 p {
 	&.large {
-		@include font-size(18,no,32);
+		@include font-size(18,yes,22);
 		font-weight: 600;
 		letter-spacing: 0.01em;
 	}
@@ -51,4 +51,9 @@ p {
 
 small {
 	font-size: 0.8em;
+}
+
+/* Hr */
+hr {
+	opacity: 0.5
 }
