--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -88,6 +88,9 @@
 		background-color: $secondary;
 		color: $body-dark;
 	}
+	hr {
+		border-color: $body-dark;
+	}
 }
 
 /* Footer */
